# jscoq

./: .gitignore  .gitlab-ci.yml  .gitmodules  .jshintrc  .merlin  .swp  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gruntfile.js  HISTORY  LICENSE  Makefile  Makefile.addons  README.md  THANKS  about.html  bower.json  build-common.sh  build-theories.sh  build.sh  cli.js  cma_comp.sh  config.mk  coqjslib.ml  dune  dune-project  dune-workspace  dune-workspace-64  dune-workspace.64  esbuild-cli.mjs  esbuild-pkg.mjs  esbuild.mjs  fsInput.js  icoq.ml  icoq.mli  ide.html  index.html  jsconsole.html  (+26 more)
.github/workflows/: ci.yml
.yarn/releases/: yarn-sources.cjs
backend/: coq-identifier.js  coq-worker.js  coq-worker.ts  future.ts  index.ts  protocol.ts  types.ts
backend/common/: dune  icoq.ml  icoq.mli  jscoq_doc.ml  jscoq_doc.mli  jscoq_interp.ml  jscoq_interp.mli  jscoq_proto.ml  jslib.ml  jslib.mli  request_interp.ml
backend/jsoo/: dune  jscoq_interp.ml  jscoq_interp.mli  jscoq_util.ml  jscoq_worker.ml  jslibmng.ml  jslibmng.mli  jslog.mli
backend/jsoo/js_stub/: coq_perf.js  coq_vm.js  interrupt.js  marshal64.js  unix.js
backend/wasm/: byterun_stubs.c  core.ts  dune  interrupt.ts  io.ts  lib_stubs.c  ocaml_exec.ts  pkgs.ts  wacoq_extern.c  wacoq_worker.ml  wacoq_worker.ts
backend/wasm/shims/: buffer-shim.js  process-shim.js
bower_components/font-awesome/: .bower.json
bower_components/gridstack/: .bower.json  bower.json
bower_components/jquery/: .bower.json
bower_components/lodash/: .bower.json
coq-addons/: common.mk  dsp.addon  elpi.addon  equations.addon  extlib.addon  iris.addon  ltac2.addon  mathcomp.addon  odd-order.addon  quickchick.addon  sf.addon  simpleio.addon  ssreflect.addon
coq-external/dsp/: Makefile  dspsupport.v
coq-js/: .merlin  Makefile  code_info.ml  code_info.mli  dune  icoq.ml  icoq.mli  jscoq.js  jscoq.ml  jscoq.mli  jscoq_doc.ml  jscoq_doc.mli  jscoq_interp.ml  jscoq_proto.ml  jscoq_version.ml  jscoq_worker.ml  jser_feedback.ml  jser_goals.ml  jser_names.ml  jslib.ml  jslib.mli  jslibmng.ml  jslibmng.mli  jslog.ml  jslog.mli  jsmock.js  jsoo_dl.ml  jssexp.ml  libmngstub.c  serapi_goals.ml  serapi_goals.mli
coq-js/js_stub/: coq_vm.js  interrupt.js  marshal.js  marshal32.js  marshal64.js  mutex.js  str.js  unix.js  zarith.js
coq-js/patches/: avoid-vm.patch
coq-jslib/: cli.ts  dftlibs.ml  dftlibs.mli  dune  jslib.ml  jslib.mli  mkdeps.js  mklibfs.ml  mklibjson.ml  mkpkg.js
coq-jslib/metadata/: coq-pkgs.json
coq-layout-engine/: Makefile  README.md  boxModel.ml  boxModel.mli  coq_util.ml  coq_util.mli  dune  dune-project.bak  term.ml  term.mli
coq-libjs/: coq_vm.js  str.js  unix.js
coq-patches/: trampoline.patch
coq-tools/: .merlin  Makefile  byte_cache.js  dftlibs.ml  mklibfs.ml  mklibjson.ml  mkpkg.js
coq-toplevel/: Makefile  jscoqtop.ml  toplevel.html
css/: coq-base.css  coq-dark.css  coq-light.css  coq-log.css  editor-base.css  ide-base.css  ide-dark.css  ide.css  jscoq.css
docs/: Build.md  authoring.md  build.md  developing.md  embedding.md  inject-jscoq.gawk  manual.md  npm-landing.html  papers.md  quick-help.html
ejs/: #pace.css#
etc/: adopt-addons  consume-addons  serve.json  toolchain-setup.sh
etc/docker/: .gitignore  Dockerfile  Makefile  README.md  gosu-entrypoint.sh  sdk-findlib.conf  sdk-startup.sh
etc/notes/: announce-0.11.md  announce-0.9.md  todo.md
etc/patches/: 0001-pcoq-latency-fix.patch  0002-mltop-Allow-clients-to-access-Coq-s-ml_path.patch  Makefile  _getfns.cjs  avoid-vm.patch  byte-only.patch  coerce-32bit.patch  cps.patch  dune-3.patch  fold.patch  fold.patch.disabled  interrupt.patch  lazy-noinline.patch  lia-lazy.patch  (+4 more)
examples/: .gitignore  Coq86.html  Makefile  Stlc.html  dft.css  dft.html  dune  equations_intro.html  gentle-intro.html  hott.html  inf-primes.html  iris.html  legacy.html  mirror-core-rtac-demo.html  mirrorcore.html  mtac_tutorial.html  nahas_tutorial.v  npm-template.html  playful.html  scratchpad.html  sqrt2.v  sqrt_2.template.html  sqrt_2.v
graphics/: arrows.ai  icons.ai
js/: .jshintrc  _bower.js  byte_cache.js  cm-provider.js  coq-layout-classic.js  coq-manager.js  coq-packages.js  coq-panels.js  coq_vm.js  ide.js  jscoq-loader.js  layout.js  mutex.js  unix.js
jsoo-util/: .merlin  Makefile  jsoo_dl.ml
lib-js/: aux.js  byte_cache.js  coq_vm.js  ml_aux.js  mutex.js  unix.js
loaders/: loader1.html  loader2.html  loader3.html  loader4.html  loader5.html
notes/: DESIGN.md  announce.txt  coq-notes.md
old/: coqtop.patch
patches/: coq-dir-cache.patch  mathcomp-fast-load.patch  ssr-git.patch
tests/: main.js
ui-css/: coq-base.css  coq-dark.css  coq-light.css  coq-log.css  help.css  jscoqdoc.css  kbd.css  landing-page.css  project.css  settings.css
ui-external/: render-math.js
ui-images/: .npmignore
ui-js/: .gitignore  .jshintrc  .npmignore  cm-provider-container.js  cm-provider.js  contextual-info.js  coq-build.js  coq-cli.js  coq-ctxinfo.js  coq-layout-classic.js  coq-manager.js  coq-mode.js  coq-packages.js  dune  editor-base.ts  etc.js  format-pprint.js  fs-interface.js  future.js  headless.ts  ide-project.js  index.js  jscoq-agent.js  jscoq-loader.js  jscoq-worker-interface.js  jscoq.js  jscoqdoc.cjs  jscoqdoc.js  jscoqvar.js  lib.js  public-path.js  settings.js  webpack.config.js
ui-js/addon/: collab.js  company-coq.js  company-coq.ts  dune  public-path.js
ui-js/addon/collab/: collab.css  hastebin.js  index.ts  p2p-chunk.js  p2p.ts
ui-js/app/: Info.plist  app.js  external.list  package.json
ui-js/components/: file-list.js  file-view.js  problem-list.js  project-build-status.vue  project-context-menu.vue  project-file-context-menu.vue  project-panel-default-layout.vue
ui-js/components/context-menu/: context-menu.css
ui-js/components/file-list/: file.vue  folder-knob.vue  folder.vue  index.vue  span-editable.vue
ui-js/mode/: coq-lang.ts  coq-mode.grammar  coq-mode.js  coq-tokens.ts
ui-js/symbols/: coq-arith.symb.json  coq-base.symb.json  coq-collections.symb.json  coq-reals.symb.json  init.symb.json
www/: ide.html
(+125 files in other folders)
