synopsis:     "The jsCoq Interactive Proof System"
description:  "A port of Coq to JavaScript -- run Coq in your browser"
name:         "jscoq"
opam-version: "2.0"
maintainer:   "e@x80.org"
authors:      "Emilio Jesús Gallego Arias, Shachar Itzhaky, Benoît Pin"
homepage:     "https://github.com/jscoq/jscoq"
bug-reports:  "https://github.com/jscoq/jscoq/issues"
dev-repo:     "git+https://github.com/jscoq/jscoq.git"
license:      "AGPL-3.0-or-later"
doc:          "https://github.com/jscoq/jscoq#readme"

depends: [
  "ocaml"               { >= "4.07.1"           }
  "dune"                { >= "2.4.0"            }
  "js_of_ocaml"         { >= "3.8.0"            }
  "js_of_ocaml-ppx"     { >= "3.8.0"            }
  "js_of_ocaml-lwt"     { >= "3.8.0"            }
  "yojson"              { >= "1.7.0"            }
  "ppx_deriving_yojson" { >= "3.5.1"            }
  "ppx_import"          { build & >= "1.6.2"    }
  "lwt_ppx"             { >= "1.2.4"            }
  # We should just rely on OPAM's serlib but this is still early
  "sexplib"             { >= "v0.12.0"           }
  "ppx_sexp_conv"       { build   & >= "v0.12.0" }
  # We build a local, patched Coq, but however it is still a dependency and
  # we could build from the opam-installed setup.
  # "coq"                 { >= "8.13.0" & < "8.14" }
  # This are dependencies of Coq itself.
  "zarith"              { >= "1.10" }
  "zarith_stubs_js"
]

build: [ "dune" "build" "-p" name "-j" jobs ]
