(library
 (name jscoqlib)
 (modes byte)
 (modules :standard \ jscoq_worker jslog)
 (preprocess (staged_pps lwt_ppx js_of_ocaml.ppx ppx_import ppx_deriving_yojson))
 (flags :standard -w -39)
 (libraries js_of_ocaml-lwt yojson ppx_deriving_yojson.runtime coq.stm jslib))

(executable
 (name jscoq_worker)
 (modules jscoq_worker)
 (modes byte)
 (preprocess (staged_pps js_of_ocaml.ppx ppx_import ppx_deriving_yojson))
 (js_of_ocaml
  (javascript_files
    js_stub/mutex.js
    js_stub/unix.js
    js_stub/str.js
    js_stub/coq_vm.js
    js_stub/marshal32.js)
  (flags :standard --dynlink +nat.js +dynlink.js +toplevel.js))
  ; (flags :standard --pretty --noinline --disable shortvar --debug-info +nat.js +dynlink.js +toplevel.js))
 (link_flags -linkall -no-check-prims)
 ; The old makefile set: -noautolink -no-check-prims
 (libraries jscoqlib))

