(library
 (name jscoqlib)
 (modes byte)
 (modules :standard \ jscoq_worker jslog)
 (preprocess (staged_pps lwt_ppx js_of_ocaml.ppx ppx_import ppx_deriving_yojson))
 (flags :standard -w -39)
 (libraries js_of_ocaml-lwt yojson ppx_deriving_yojson.runtime coq.stm coq.toplevel jslib))

(executable
 (name jscoq_worker)
 (modules jscoq_worker)
 (modes byte)
 (preprocess (staged_pps lwt_ppx js_of_ocaml.ppx ppx_import ppx_deriving_yojson))
 (js_of_ocaml
  (javascript_files
    js_stub/mutex.js
    js_stub/unix.js
    js_stub/str.js
    js_stub/coq_vm.js
    js_stub/marshal.js
    marshal-arch.js)
  (flags :standard (:include .extraflags) --dynlink +nat.js +dynlink.js +toplevel.js))
 (link_flags -linkall -no-check-prims)
 ; The old makefile set: -noautolink -no-check-prims
 (libraries num jscoqlib))

(rule
 (targets marshal-arch.js)
 (action
  (copy js_stub/marshal%{ocaml-config:word_size}.js %{targets})))

; Link jscoq_worker.js => jscoq_worker.bc.js
; This is done to allow serving from either build or source tree the same way.
; Notice the `promote` mode, since the source tree may have a (different) link
; present, created by `make links`.
(rule
 (targets jscoq_worker.js)
 (deps jscoq_worker.bc.js)
 (mode promote)
 (action (bash "ln -s %{deps} %{targets}")))

; Set debug flags if JSCOQ_DEBUG environment variable is set.
; (ugly, but there are no conditional expressions in Dune)
(rule  
 (targets .extraflags)
 (deps (env_var JSCOQ_DEBUG))
 (action (with-stdout-to %{targets} 
    (bash "echo '(' ${JSCOQ_DEBUG+ --pretty --noinline --disable shortvar --debug-info} ')'")))
)
