(library
 (name         jslib)
 (preprocess   (staged_pps ppx_import ppx_deriving_yojson))
 (modules      jslib)
 (libraries    yojson ppx_deriving_yojson.runtime))

(library
 (name         dftlibs)
 (modules      dftlibs))

(executable
 (public_name  mklibfs)
 (modules      mklibfs)
 (libraries    dftlibs unix))

(executable
 (public_name  mklibjson)
 (modules      mklibjson)
 (libraries    yojson jslib dftlibs))

