(rule
 (targets coq-build.browser.js)
 (deps
  (source_tree .)
  (source_tree ../coq-jslib)
  ../node_modules)
 (action (bash "npx browserify coq-build.js -d -s coqBuild -o %{targets}"))
)

(rule
 (targets ide-project.browser.js)
 (deps
  (source_tree .)
  (source_tree ../coq-jslib/build)
  ../node_modules)
 (action
  (bash "npx webpack --mode production --config-name ide-project")))
