(library
 (name jscoq_core)
 (modes byte native)
 (preprocess (staged_pps lwt_ppx ppx_import ppx_deriving_yojson))
 (flags :standard -w -39)
 (libraries
   yojson ppx_deriving_yojson.runtime
   coq-core.stm coq-core.toplevel
   coq-serapi.serlib
   coq-lsp.fleche))

(rule
 (target jscoq_version.ml)
 (deps ../../package.json)
 (action (with-stdout-to %{target}
  (run node -p
      "`let jscoq_version = \"${require(\"../../package.json\").version}\"`"))))
