(executable
 (name jscoq_worker)
 (modes js)
 (preprocess (staged_pps lwt_ppx js_of_ocaml-ppx ppx_import ppx_deriving_yojson))
 (js_of_ocaml
  (javascript_files
    js_stub/mutex.js
    js_stub/unix.js
    js_stub/coq_vm.js
    js_stub/interrupt.js
    marshal-arch.js)
  (flags :standard (:include .extraflags) --dynlink +dynlink.js +toplevel.js --setenv PATH=/bin))
 (link_flags -linkall -no-check-prims)
 ; The old makefile set: -noautolink -no-check-prims
 (libraries zarith_stubs_js jscoq_core js_of_ocaml-lwt))

(rule
 (target jscoq_worker.bc.cjs)
 (mode promote)
 (action (copy jscoq_worker.bc.js jscoq_worker.bc.cjs)))

(rule
 (targets marshal-arch.js)
 (action
  (copy js_stub/marshal%{ocaml-config:word_size}.js %{targets})))

; Set debug flags if JSCOQ_DEBUG environment variable is set.
; (ugly, but there are no conditional expressions in Dune)
(rule  
 (targets .extraflags)
 (deps (env_var JSCOQ_DEBUG))
 (action (with-stdout-to %{targets} 
    (bash "echo '(' ${JSCOQ_DEBUG+ --pretty --noinline --disable shortvar --debug-info} ')'")))
)
